# lighting-paperwork

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  chanhook.py  channel_hookup.py  color_cut_list.py  excel_format.py  excel_formatter.py  generate_df.py  generate_paperwork.py  gobo_pull.py  header_footer.tpl  helpers.py  instrument_schedule.py  paperwork.py  pyproject.toml  style.py  testing.py  todo_chan.md  vectorworks_xml.py
.github/workflows/: ci.yml  lint-test.yml  python-publish.yml
lighting_paperwork/: __init__.py  channel_hookup.py  color_cut_list.py  excel_formatter.py  generate_paperwork.py  gobo_pull.py  helpers.py  instrument_schedule.py  paperwork.py  paperwork_exporters.py  style.py  vectorworks_xml.py
tests/: TestFile.xml  __init__.py  conftest.py  test_channel_hookup.py  test_color_cut_list.py  test_generate_paperwork.py  test_gobo_pull.py  test_helpers.py  test_instrument_schedule.py  test_vw_import.py
