[project]
name = "lighting_paperwork"
version = "0.1.4"
description = "Generate lighting paperwork from Vectorworks XML"
authors = [{name = "Reid Sox-Harris", email="reid@soxharris.com"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "natsort>=8.4.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "weasyprint>=66",
]

[project.urls]
repository = "https://github.com/eosti/lighting-paperwork"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "types-openpyxl>=3.1.5.20250602",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.py", "*.tpl"]

[project.scripts]
lighting-paperwork = "lighting_paperwork.generate_paperwork:main"

[tool.pylint.main]
ignore = [ ".venv" ]

[tool.mypy]
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# no_implicit_optional = true
# no_implicit_reexport = true
# strict_equality = true
# warn_redundant_casts = true
# warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--maxfail=1"
#--cov=testing_demo"
