[project]
name = "lighting_paperwork"
version = "0.1.4"
description = "Generate lighting paperwork from Vectorworks XML"
authors = [{name = "Reid Sox-Harris", email="reid@soxharris.com"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "jinja2>=3.1.6",
    "natsort>=8.4.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "weasyprint>=66",
]

[project.urls]
repository = "https://github.com/eosti/lighting-paperwork"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.9",
    "types-openpyxl>=3.1.5.20250602",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.py", "*.tpl"]

[project.scripts]
lighting-paperwork = "lighting_paperwork.generate_paperwork:main"

[tool.pylint.main]
ignore = [ ".venv" ]

[tool.mypy]
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# no_implicit_optional = true
# no_implicit_reexport = true
# strict_equality = true
# warn_redundant_casts = true
# warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--maxfail=1"
#--cov=testing_demo"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]

ignore = [
#     'D100',    # Missing docstring in public module
#     'D104',    # Missing docstring in public package
#     'D107',    # Missing docstring in `__init__`
#     'D400',    # First line should end with a period'
#     'D401',    # First line of docstring should be in imperative mood'
    'EM101',   # Exception must not use a string literal, assign to variable first
    'EM102',   # Exception must not use an f-string literal, assign to variable first
#     'G004',    # Logging statement uses f-string
#     'PD901',   # Avoid using the generic variable name `df` for DataFrames
    'PLR2004', # Magic value used in comparison
    'TRY003',  # Avoid specifying long messages outside the exception class 
    'FIX002',  # Using TODOs as context for future work
    'COM812',  # Trailing commas added by formatter
    'D203',    # No blank line before class (D211 preferred by Google)
    'D213',    # No summary line on second line (D212 preferred by Google)
]

[tool.ruff.lint.per-file-ignores]
'tests/*.py' = [
    'D101',    # Missing docstring in public class
    'D102',    # Missing docstring in public method
    'D103',    # Missing docstring in public function
    'D106',    # Missing docstring in public nested class
    'PLR0913', # Too many arguments in function definition
    'PLR0915', # Too many statements
    'S101',    # Use of `assert` detected
    'SLF001',  # Private member accessed
    'ANN',     # Typechecking
    'PLR2004', # Magic values
    'PT011',   # pytest.raises too broad
]

